--- a/ansible/playbooks/cluster-nuke.yml
+++ b/ansible/playbooks/cluster-nuke.yml
@@ -1,6 +1,6 @@
 ---
 - name: Cluster Nuke
-  hosts: all
+  hosts: kubernetes
   become: true
   gather_facts: true
   any_errors_fatal: true
@@ -8,14 +8,14 @@
     - name: nuke
       prompt: |-
         Are you sure you want to nuke this cluster?
-        Type 'YES I WANT TO DESTROY THIS CLUSTER' to proceed
+        Type 'y/n' to proceed
       default: "n"
       private: false
   pre_tasks:
     - name: Check for confirmation
       ansible.builtin.fail:
         msg: Aborted nuking the cluster
-      when: nuke != 'YES I WANT TO DESTROY THIS CLUSTER'
+      when: nuke != 'y'
 
     - name: Pausing for 5 seconds...
       ansible.builtin.pause:
