fix: replaced all k8s with k3s as intended v2

--- a/ansible/inventory/host_vars/k3s-00.sops.yml
+++ b/ansible/inventory/host_vars/k3s-00.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:BKMR5wgJ,iv:YlsW16zLhKxPoACzgWurRUp0sGfN5nGppWYSD+sSKpA=,tag:PEELinLJ3d5BCvlOwsXhdA==,type:str]
-ansible_user: ENC[AES256_GCM,data:O+/UDlA=,iv:hS4jk3FRKZyVd9cEhg2HColUgJKuIIQcnsp3IkWZG60=,tag:VHuLCvjWKV4HVnLUFzDawQ==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:c5+J3FNcBbmtpB68lZAw7g==,iv:kr3bjf8VgPEUg+uJ37TxTg4BIt9/GYsjI64F2P/rwBs=,tag:aXMjMQyRSYKpfAqdLe4gCA==,type:str]
+kind: ENC[AES256_GCM,data:Q8TPF2y5,iv:yIIe6Ljz6UpbBk20A2q1uDyVUjMsq2I1hCzm5hSkdgY=,tag:IjW/76IARvZFYTkVKkSjnw==,type:str]
+ansible_user: ENC[AES256_GCM,data:uZyVKmY=,iv:0/bYA75TCLMzO96RQpdo0QKd/ukuscCMPCEMB6sgqTY=,tag:x86VgATVFUuxqmiT7WuwXg==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:lQoJb4qpUap0pjAw4LJyDg==,iv:jb6e4+tiEgKgF46k2pB+Ihpf6nBNhwG4SyFO3aBmOKA=,tag:NCsrsHOZdEyAhNv1FEFYDw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1czw3wv7cwhm6swsj5v9uv4q7truevhvqszkgt34pe0p9jknn8e3slagdzn
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBjRkdtNm5oR1E4ZG00em1i
-            SHJBdWNUY1VFeTg4N0d0RU1tWlhmTVJKNkdZCnpxeGJMWE9DNC9qUDRjaUc0MW1K
-            SkNXbUQ3WDMvL3VxcEN6dDlOWC8vcHcKLS0tIFp3MHJsaUZ2djdENUptcDlRNzha
-            TEdKTlREZm9NbHpiWlVVMFpXR0pYQm8Kru2W2TJisM6yR3P6QqhcDdSQPsQ0kuaG
-            UbpAXYvpjpdQE/wxiQkBN0BpqXP+QQthBQsK74rR5Cg+48HvZCQBOw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBBRmJUWWl0dm1IN2pnY29p
+            c2VKQTZ1SVFBcGVTbFdrbnJ5cXpuSnFUVHpJCk1MYkIvejBOUkc3V29lOTF1ZUw0
+            bC9SMmpOaFdZRFpkVmVyRmNmSFYwTncKLS0tIGdJOFZPaFhWdU5VRkNQdzNRN0M4
+            NmJkalVxSk5RZWlYMmpjMUFpdC80MVkKqVYoGnu2nBTzx6EaOwIqTbr9THY6Ocbk
+            5YOpaNahwIfmZrCPkrXXUU6gDTAOekTpWn7z9H7cfiIT2FrqivzftA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-07-04T20:48:14Z"
-    mac: ENC[AES256_GCM,data:f63uc1nhjqj+TwM8DDe0qbiKK/cmn3yKZ5aY52OISuGT102fe3J1vO5/5OEXPucNA5eeIIvGFZFKtzVnMtDx6HSS8Q57UB+wJ5gsD0laPydvRXupXk5jL89dmRYrCN73UjxJrR8w0rTZwXpzZVZifG3LHvTz0bXrKxpujhLPqlc=,iv:1VFGo4Y+s/I5/Cvcy6VsnaLFc2xBOT/bzidh+YVPfe0=,tag:cUaM/4Az9lE8hStT0inuZg==,type:str]
+    lastmodified: "2023-07-05T08:09:04Z"
+    mac: ENC[AES256_GCM,data:VqnIljtUwgMoov4HXf7H1v5hVl91K3thkil1QYwbkBF9vcnplt2ZtA3IVbcHrECMcAT5SapvbkXyh0selc5thdDUjVp3P4oGqqyEo+MuQ6gYappxmz7XTbj3UNYqDnQrAeclmltbduA+Vipr12KItd9UKYl/Pk9iU7YISy6WXGw=,iv:U5hb9xtXiTTAFG/eCIXsCcV+XqFpnf5KcUHcLO4dFSs=,tag:M0g6HNcCFysoVmqioRoTBA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
