--- a/ansible/inventory/host_vars/k3s-01.sops.yml
+++ b/ansible/inventory/host_vars/k3s-01.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:4qO0t8u2,iv:L/nK/drqYa2UwIzINLNtnkdn4wn5Q8X9qjfmAMQQehQ=,tag:Xt3DjZM3Yz1vfwwapPY9/g==,type:str]
-ansible_user: ENC[AES256_GCM,data:LAXJdi4=,iv:mQhybcivvTiOaRtm5q18X9VAblA6rHlbPMeGiY3u3Bs=,tag:J8eiI8h1wdrMXv9AkaDjww==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:rOqjPvgPivMP1FFWSInAaQ==,iv:8XLISVH0VNqs7ta4h88/IjTqzUHOBySQLSuPWzqXc0M=,tag:4JSIqlJ5yzYAj9qkCFer7g==,type:str]
+kind: ENC[AES256_GCM,data:+uo15ytC,iv:28GcCFyxBY7hnYEzfzofyfvRhLX96v9MaVv7t1PzoCU=,tag:iCljTkoKXdnIRsg27sA1lA==,type:str]
+ansible_user: ENC[AES256_GCM,data:Dapl39Q=,iv:kvyW4vKN6UKV4xk0ulyMQHYuOpBje5LXPWt4IU19xsQ=,tag:Do4TYu+QTY4ylKRGnaLnnw==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:VZWOqlzfdMWz0OJOTOss3Q==,iv:TozysVXr84yCweczEfpMOLsboqFshI0z4omuq17Bz0M=,tag:DpvfGtf3PACLAnTnYvmadA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1czw3wv7cwhm6swsj5v9uv4q7truevhvqszkgt34pe0p9jknn8e3slagdzn
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBxMG5lcFVFeHl6WDFMTEY3
-            RnhqR3EraGlDVkFxZjNXckZpbnBSK2lpUkFVCkNZUk5HUjQzZ0tWY2ZIKzNPRUZp
-            WllUN3h5QTNlbzN0Z3UvZmpMMG1RdWcKLS0tIEVzbnZZRGxiSE9Kczg2Q0QrYk9U
-            V1h1Z21lekdaZXk3SEp2aEYyUWRwZncKt6TUphjSI0QlViJGke55ov+kbRXo6qwO
-            FASmCPBFVOeAP3T9xqY/cwpR7t1ehdITFW9hg0BIASYRQMERmYyuPw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBlbFR3Vm1WL28wSEhPcEQ2
+            UWE1emtRQXk5dk9pOWlQMXRiUWhUQ1dMdmhZCkMwL0RiSmIwSlM4aWcxNk5PRjlw
+            emJhZ2N0SEoxcWl5Q2FYOUdqdVozdVEKLS0tIGdDTldPVW14Sm9lTWR4MFl2OGhp
+            aHVUTFRndG5BNlR1R2RmN09mUVhMY0EK74H7py7mut2fQiZ7LpBFinbNVei6JKX9
+            ZO6kRdHMp0DT8S0bMwu+o/5BoLQuk4AmCxruCFr+LocWplS2UDT7Ww==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-07-04T20:48:14Z"
-    mac: ENC[AES256_GCM,data:YIDrrMax8GJhEQRBDXmDkyWNbattfJFFM4tJUwfFGfsLJ6itY+l1Lv+rCydcfJ1vG64rH4bEMVEIPZyT739q0pT2sTypTbp9nzQWDGgoBvBCS+QZEhPIiG1n085eS0qxBTz4FFUQTVE34vklJxpVXQEdfbUYaHbryLcSs7xib9U=,iv:Rw2O2Khv1owN32/erduhuS7+VXQCBRuDLR2fzYreDTc=,tag:74SGXQYvJteXHvoqCCIeIw==,type:str]
+    lastmodified: "2023-07-05T08:09:04Z"
+    mac: ENC[AES256_GCM,data:Y9W1MMHasQSMXhM4h5rrcQ5PnUM7yjQ4Jwgr5Ssxcm7FJmTJ5NPF0+TUuSv3xt2S37ELrqTmUeIcImghA57D6VNObFD5QjOF/P3fmcuuCovJfRt4gNiJstGV15vkZL825ZfNTqDf1Zdlobqj7tRQ+n3WoSvg4WDA0qN/rBQwAnc=,iv:IzoAcAo1CHqjmYYLfM+AV6maCFWxuqevEyyHw3woisA=,tag:/8Ex9YczySb9iZTva0uRWw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
