--- a/ansible/inventory/host_vars/k3s-02.sops.yml
+++ b/ansible/inventory/host_vars/k3s-02.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:F3doTUyu,iv:1pAygMNWQn/sPoiOWAjkhAyASDZQC2rAAAc9cvW40UM=,tag:gx8EiWu4ykaFRIM3jcifZg==,type:str]
-ansible_user: ENC[AES256_GCM,data:oiEKIEM=,iv:nruLBywuRLCXgzR/mQfomryXceLmtiYJvnyqbcwsDSU=,tag:zKT7Qfe564FEstcu+V9npA==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:sc3XoAagWeuDYi7qsvu3EQ==,iv:KP+BF+z2bNQNniGq/62FFSCBpcNmAvUy6FzYxb8WDEA=,tag:GbhI8KRqGg1uvpvGLp5y3g==,type:str]
+kind: ENC[AES256_GCM,data:8p5blggK,iv:LFaUovabrAZEhpp/bnftZbhdOjtyUwmN0uwCcz+TPTw=,tag:8BXG3kbVz7/D1ktvgn3Ceg==,type:str]
+ansible_user: ENC[AES256_GCM,data:O7zlaZs=,iv:2AF+qTFXoa59gbMd4SmzWiSqlhiMoouT+O/ZzkrZB4U=,tag:A6DxEFYwvfk7WlA6MqrUhA==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:8WjAaX22ZlN1lsrwBTC+Xw==,iv:VBR2f5M4N9wySDktQiPj1ZlX9ruMo+4ITAJT4Sia0NU=,tag:sfc+tkwi785pMrj2hgEw0w==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1czw3wv7cwhm6swsj5v9uv4q7truevhvqszkgt34pe0p9jknn8e3slagdzn
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBsYSt3UWFRMnRNbTJ5R29P
-            RVRrTC9yekpqMWJDbGZ5bjM3RlZuL21XU1RRCmMyN0JzRjErQlNVT3oyTDNhM2Nm
-            OHdDMG5tcXlJWStVWmFvWDJuTnhpSjgKLS0tIEJhYThtV1ZzeXB1UGhzSG1Zb2ts
-            U2tjVkhzRGFMSGxQZlNYMGk3THpZV2cKUSzScaD15Dtp5RZlBbOaE51fM1IVjz0U
-            pilPdGpEQ4tSkZQjHoBTyWmb8QAkApQsH9BGSDvZz/dl5/UYmbZo9g==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB6b1AzeGNCSUlQKy9na2Z0
+            TDBrazM1SDNkMTdEYlpyWFRDVkUyNXNldVE0CmxjUzAzeDhacThwaW9CbHVqYkxE
+            ellnSzlFVUE0TmU5WDJDNlUzUkNDYU0KLS0tIHc5N0hvbTlMRDBsdy9BbGlLNGlF
+            MWhjVDVGRzBSM3VzU3h2NzRidU5HUGcKGxbdfQSovV8qlyVwe5r+liktsVmDzfuM
+            0sG0tXtT0XOeFst4utSEi+6C/Wwhxk0TYRTuhWA/z+Y9A1yjXgZ4UQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-07-04T20:48:14Z"
-    mac: ENC[AES256_GCM,data:7NOCh/33QNiFSz5C3/9jNei0xoCgIpWEULBO+CYAsC81g/vt2UTGBTEiMjAC1CViFrnmXRF9uOJXO/G8g9LgFIUq3lCk42EXBodk9JKFHlvt8kz6ECTVHRpoR0CLUAEZ8PIGbO7NjIqoGEzhAbJDDGS/kwmhubvpFfbS7+w6bxY=,iv:mOAmPpQ6jOQ7khQLmyWBz0YklRxTxXHp39fqDF6On88=,tag:6I4TIR+NRUN7qDz+oxhB3Q==,type:str]
+    lastmodified: "2023-07-05T08:09:04Z"
+    mac: ENC[AES256_GCM,data:5l4HDaN84aefEl7JdjLvMlajD7OIh6/2L8yiL4ZAu+fjdz7F5U88XZOFG73/drWhYVOnOtBc4kwfk8oGuxZvX52MfJCiPrl+ZCrYFLCNBi3pypdBYMV2Ki+Q/p9N7jIqU/gU7211YVOFfYhn56WTgC6iJj81KOQfduddY6kfNMM=,iv:VmVt3ID1DBDOCOt+Tc4RFh5pTbPc0AGNqkrOCHWrVDw=,tag:yU2DmgCnBOe8GEVcirt9QQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
