--- a/kubernetes/apps/monitoring/grafana/app/secret.sops.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/secret.sops.yaml
@@ -4,8 +4,8 @@ metadata:
     name: grafana-admin-secret
     namespace: monitoring
 stringData:
-    admin-user: ENC[AES256_GCM,data:GqH6nXw=,iv:9UznWPUPG867JnfFmLVHGA9M2M1J8iKpX0lBoeMCgjM=,tag:z/kRWplhqH16nbBHkRA69w==,type:str]
-    admin-password: ENC[AES256_GCM,data:EdrFvXRKuXeUAXFODE+vb4dniHP0shfn,iv:NB+3aCHBP2D0t2QupdBsh1TfQvKDURIzgWr2eCZdrz8=,tag:DyP/R8nI6oer7V23oYmkQw==,type:str]
+    admin-user: ENC[AES256_GCM,data:zRphO4Q=,iv:bBco7hCnu48veB4fIUveZuRvRvS8dmdVQGLD8I2oAv8=,tag:OQMPNP8kGWFMpUVZmRNaDA==,type:str]
+    admin-password: ENC[AES256_GCM,data:mVYmGWzJEhDz/59PCV9fbyVtA8N2YtpR,iv:jjG/H+kK3Zkd/p9gX3AYHaWQ3jUiX3kiy5iozy9zhMg=,tag:96BtDNP2yVW0M0SYicMf7Q==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -15,14 +15,14 @@ sops:
         - recipient: age1czw3wv7cwhm6swsj5v9uv4q7truevhvqszkgt34pe0p9jknn8e3slagdzn
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBlY3QvQ080bEJ0M1l3cllE
-            a3NTWUYwK2dRdVo1WjRucnlOUlZOMDZwUmpvCjQwcDduS2pXYlZiMmhLMXM1MnZD
-            SHdaaDI3M3hsOVJEWi9VNE5UZlRBWkUKLS0tIFA0Z2M1em5jQWhvTE1EZ0J1cHhF
-            aVZRQjdnMGpDVlJBTTArR3ZsTVlpNTAK6q4VDljJEBQtaoRcZjwuv+QyOvv+IUj3
-            mkZn+8H4SviEqIY803b0LmCXMlooXaBQiDLT5PBlvDKpHzLAkKfIDA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBGUDVrTTVPL2NBK0NraG5p
+            SlNIVnY2akpvamlFTHJMNWJOTTFmQnRYZDE0CjFuVHBKRjNDUFhFQ1p5L0xLZGdW
+            RjNtOXRuYW8rSjg0dW5NRWRiQVhldDQKLS0tIGNXamZtQ1FXaklUdEc0YW55ZlRj
+            QnNNa0RURTJaRjhWTHpSRFNHRzhqaFkKJq89YRiYqMlvzqB7aYZT8ZxBHoEWDoG8
+            knv+81Svshh5y1AtumWprhRl5rFTCFsdPgiQF1/JTfFbW63ytNpvvA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-07-04T20:48:14Z"
-    mac: ENC[AES256_GCM,data:JCnv1f51OqSiSUEgOWTpFA+H1iupxOWsmgcgIuNaf+nP9QOIKXe5KRYPtC2CU5ZdTbItRUpVKcQFFW0z9XSWdOW1RujurO0u3CQWXF967uWkXa4zgbMZI1z31tgtY3nY/aSMGcPtFbfzgratS38lH7sKRdIiRSJX1yncWW71s60=,iv:Z4Z5oBsAnaIKC8GX/WlO8FIE6GL/fhsPCsChfuHo2D0=,tag:H4cIszACdAVJerR5q9OvBA==,type:str]
+    lastmodified: "2023-07-05T08:09:05Z"
+    mac: ENC[AES256_GCM,data:zarvBuVLZpNvQ6n8fTEyLuSjZK6rbbO0aQcaJFEcLVMzeD5SttM4grkkGa9LU5JJPEfqsAVh84liT4yE7h+b1wpZ8F0GptqDmbuUpxZhA5jyJYUO3O/Tygs757WWnliC6YHv2kAjlLaTWdBDXpt3qzfVTmcL13yk6UB2s2yBfO0=,iv:n3DlSH3Xh+5Hl7pFFTDPkfAez2ypGMnnFsxqXpnLH2Y=,tag:/JVTYpqZSdesyFDAKJJP8g==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
