--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,8 +4,8 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:swHAnCl5s45D,iv:PuI8GJ+ReJ/W+JTVrP6luDFdx4xRPlXeTynsfepguuM=,tag:RwUTy0k6Ooe9C2izaI6q7g==,type:str]
-    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:W+8+dJOUx7/dKNSUmglu8Q==,iv:Ol4E38eMCDdsefjp7rHS/AUPoq7XanG51GjSykbKJ8o=,tag:4JRuWaQMwsrwbCWLFk8C8Q==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:iaJSXrYLo2+Z,iv:pKuB7qyaUZ+5jMeB1RV49SniHrTefeCliOG9lnNBsao=,tag:oVTfeb3ohYcHdyyVBi5E0g==,type:str]
+    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:NgdmCYHYx2xWjk317N1ztg==,iv:sJT8tfzS90MUP4bgK2fT5cm34u/LFoKxW5ysXZH8E7A=,tag:6xSSmSwHuMA+9RzmfRMp+w==,type:str]
     SECRET_CLOUDFLARE_TUNNEL_ID: ""
 sops:
     kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age1czw3wv7cwhm6swsj5v9uv4q7truevhvqszkgt34pe0p9jknn8e3slagdzn
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBzOGFNdURxR1B6QTFIZ25N
-            SFBXWUtTQURhVlY1cWpONml2b1pWQjByeXhrCjExVmdRRHRIWUhxM3Y1R0JtdWZ2
-            Tk9sUE9KZG10bE9iSkVkMmhCWnY2WU0KLS0tIFBRQ05XVXNheHEyemd0MHc2Z1p1
-            YkljRXpSWk9GR2Y5QlBUTk1OT3J1RUUKtC5O6L3q2MDMAqcQstgZmDlC8yTz8J4A
-            MPf8AUHOC1aKHciBtG+v5r3Kc/p/Y+sNN2T1itaQBf0qEi38x8mwTw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBUUzhOZ2V0Wk1XM3lzYnZZ
+            RFNsbWVaN3VUaG5FZGluaEY4azhiWkNSZVNJCjBUU2VoSWZXbkRCQUJZcDlPVzJZ
+            dENVUm1jOExNeEsvSVZ4TlVTZHBFVU0KLS0tIGhyVkRYaE41cHdRc3ZCeTRoaW1G
+            SGVOTGUzUzRPR1lITk0vRkZYWU1zMjAK4/Q0c+H10u1XX0yokrD/L4IFz2AsMu7d
+            jtJBmBPrYRE2G9OGa6KOgq6ZzDjLb+EFwZjsUJvg1cVe+m22cglmpQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-07-04T20:48:14Z"
-    mac: ENC[AES256_GCM,data:H6s0rrCB1ykTGBFCN3zbJgZNGq2Ic76egapfOJo8Y1XsqJqgU6UJrjgwrjcYp9i8MbzU6AnK+9HdVUR/quT2bCcbiBAIwBpY9ivvbgkOvndYW9XJAIrm5cESFQ3DZJ0vlwYiNbhCiSmBBuJmX6IZsUH41ty0UsWqPjtbpe/USCQ=,iv:o34PmkABvTQLi1L36SQydRpJeiNS+WXtatoXcUoZ20k=,tag:z2KcZ06/o5o1Zt9nvcEaUg==,type:str]
+    lastmodified: "2023-07-05T08:09:04Z"
+    mac: ENC[AES256_GCM,data:15T3/GJ3UawE0e1KRxp7YljNQL3IvDnE5siK0d03U1yXn+aiaJSrVPBA40XiDD/3T66QNKjo5uUytaFFDodaf1PmJutDqkC5Ggt8+VJi1S0XHx+U8q8Zxl7mjlAacxwtBszg8lSPEs/kQW2QSKE03cZAktmkVMEXcKTP4nWFtkY=,iv:dAEUAxbeUgCnqhKSRHf7SNect7E+mlS3rtXME7E6Bf4=,tag:B00vxzZLpYEil6mJxpRmxg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
