--- a/kubernetes/apps/flux-system/weave-gitops/app/secret.sops.yaml
+++ b/kubernetes/apps/flux-system/weave-gitops/app/secret.sops.yaml
@@ -5,8 +5,8 @@ metadata:
     namespace: flux-system
 type: Opaque
 stringData:
-    username: ENC[AES256_GCM,data:3bU1SXs=,iv:xSbI4H48+TiwF89tESIR+cHPlG+aMK2Eov4K+1igg1s=,tag:JOFrXTDHDttmwTv9r3Yz8w==,type:str]
-    password: ENC[AES256_GCM,data:795PxvzHId/IN5IIrJbNejaBQs7N9KONgoClOP1r09+V1OjT/jDjcX+mUD8nIgp0H/TnGKE6AaoAyGGY,iv:OmyKEm6ka0MH6D5xl5TaIe9ExWILmOW+T+agbUVDAPs=,tag:+J/8SYF8MoHmvYK3MBysEg==,type:str]
+    username: ENC[AES256_GCM,data:hn0vc7I=,iv:KcpVN4dNA3m/vjjwTyyOnh9bUVMbv5BoFo6Mkj++vHc=,tag:DqCExN562zvCnwDKl/2yHQ==,type:str]
+    password: ENC[AES256_GCM,data:QvXF2p9Gp/tudrZJtzX6RusRSqUqmUyVJvtDaTYhJqv9GLxEL2PDbjesxemsPwtQm09OcyEGT9PSIupn,iv:3xSg25TQ4mLzhvB2ero5CY3MN5NUA32ux43NCfqOydw=,tag:AD0zwes/bmqU1CHwQU2SxQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age1czw3wv7cwhm6swsj5v9uv4q7truevhvqszkgt34pe0p9jknn8e3slagdzn
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5YmE0MVIxQW5Ud3ZGRFRT
-            WXlIb0FlUVV1VWh3YzZWZFpxNDRoczY5V2w0CkwzMlRsaFAxTldwQ2tlRUROOEVz
-            VjVSR0ZMcFhpMTR4T3haMUNiMGVGT1EKLS0tICtNNnNZaDdvZEtWS0FJbURNMnRB
-            cGY5eGV1Mm5BNG5SZTZBTDR3bWhoNE0KPjxQGz5RHMdQCcWZVEo71LfenoZT6NY9
-            qBV38F/cis6IIScxEgeW1sVy1IVqscVjmlsC1IjJxvSqNodvlnljkw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5SjVLRzBkb011V1dYNlJt
+            YTNYbE1LT1JLYzZEbmJ1QzRWakNSZzdQUEJnCklra000djM1OGpRbEVoOE9KbmZ2
+            RitZQWZ2OGZsSjg1RE42azY5aG1mQmcKLS0tIEl5eFRPT0hxWnVzS01JUUQxU1hq
+            NENTM1ljL3VSTnJWQXNFcFBrRWhsUGsKf/Ne9hDxxZokpJdulUBrK7jnzpFmOUX9
+            fmV2HeAKSdkFPKoIwI1ySEdd1GstiF8RqIikp/J6gNRLwnHFfrTx5g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-07-04T20:48:14Z"
-    mac: ENC[AES256_GCM,data:BTzFdj6vboyg9CT/7kdinW4QYDv9bMgNzFUfbvQjj501isw9oNWrmWwKChxO+Q8tOqHJRopCc/CSnCtITxQLTLOItvXnVrwDOiBmPc/k0GtccHFcmIdwWc1NqGxKA+f0/jNUyMBGFrJ3kkPtUCoL8ipmGrENR74N4YdehicmV3k=,iv:S4OENGi8iNKyM83ZTAWbHvYOQ7EpuYiVoR9/GFN9Pds=,tag:cvYgp2QO/7YqNx9BPRyMmA==,type:str]
+    lastmodified: "2023-07-05T08:09:05Z"
+    mac: ENC[AES256_GCM,data:MI+MTJ+1ZxlVkKngIjJ/2Jh7GVCUg3+PNnRtRsYIK8o+0zoHJVdBnmdwRjrUaEWy+WVDpqXQxEMi1ITtzMDNER9e0Q1IZfUoh9lxhmbpHbkNg4P/dtkKxRtEOmPAz/FU/b+3vVLT0kXFTOnFuzLhsK5ADLjzVwFB+Gbf1Qb1eS8=,iv:Fjgcuz1fQlx1EdTHOgTJErx3E+EOFYBHx0RQFoKg7Lg=,tag:FNM4ovZHPN3a07c0Goe5Dg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
